--- a/turisTrazo/package.json
+++ b/turisTrazo/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@tailwindcss/forms": "^0.5.6",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-owl-carousel-o": "^15.0.1",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
