--- a/turisTrazo/package.json
+++ b/turisTrazo/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@marcreichel/angular-carousel": "^3.0.1",
     "@tailwindcss/forms": "^0.5.6",
+    "flowbite": "^2.1.1",
     "ngx-cookie-service": "^15.0.0",
     "ngx-owl-carousel-o": "^15.0.1",
     "ngx-toastr": "^15.0.0",
+    "primeng": "^16.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
