--- a/turisTrazo/package.json
+++ b/turisTrazo/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@marcreichel/angular-carousel": "^3.0.1",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "@tailwindcss/forms": "^0.5.6",
     "flowbite": "^2.1.1",
     "ngx-cookie-service": "^15.0.0",
